# shortify

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  drizzle.config.ts  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  security.txt  setup.js  svelte.config.js  uno.config.js  vite.config.ts
config/: default.json5
db/drizzle/meta/: 0000_snapshot.json
dev/: color-palette.txt  readme
dev/prototype/: caching.pseudo
migrations/: 1655048735593_base.cjs  1655476902623_change-deletion-token-to-access-token.cjs
prisma/: schema.prisma
prisma/migrations/20230707074317_0_init/: migration.sql
prisma/migrations/20231008112132_init/: migration.sql
prototype/: scheme.txt
src/: app.d.ts  app.html  app.sass  app.scss  error.html  hooks.server.ts  hooks.ts  main.rs
src/lib/: db.ts  errors.ts  index.ts  intro.svelte  logging.ts  nav.svelte  navLink.svelte  ratelimit.ts  responses.ts  sharedTypes.d.ts  trueish.ts  types.ts
src/lib/components/: anchor.svelte  code.svelte  errorDisplay.svelte  heading.svelte  link.svelte  nav.svelte  navlink.svelte  shortener.svelte  user.svelte
src/lib/db/: schema.ts
src/lib/schemas/: postLink.ts
src/lib/server/: checks.ts  database.ts  db.ts  jwk.ts  logging.ts  lucia.ts  nanoid.ts  responses.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +server.ts  __error.svelte  __layout.svelte  app.css  app.less  index.svelte  terms.svelte
utils/: jwt_generate.ts
(+29 files in other folders)
