[package]
name = "linkify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", optional = true }
rocket = "=0.5.0-rc.3"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls"] }

[features]
default = ["webui", "caching", "sea-orm/sqlx-postgres"]
webui = []
caching = ["dep:redis"]
minimal = ["sea-orm/sqlx-sqlite"]  # you should not use default in this case.
